# python-package-template

./: .bandit  .buildinfo  .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  fizzbuzz.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  radon.cfg  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.py  version.html
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: main.yml  publish.yml
docs/source/: conf.py  fizzbuzz.rst  index.rst  version.rst
pysamplelib/: __init__.py  __version__.py  fizzbuzz.py
python_library_template/: __init__.py  fizzbuzz.py
pythonlib/: version.py
src/: fizzbuzz.py
src/python_library_template/: __init__.py  fizzbuzz.py
tests/unit/: test_fizzbuzz.py  test_pysamplelib.py  test_python_library_template.py  test_version.py
