[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
experimental-string-processing = true

[tool.coverage.html]
directory = "docs/coverage"

[tool.coverage.run]
branch = true
omit = [
    "*/venv/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 90.00
show_missing = true

[tool.coverage.xml]
output = "docs/coverage/coverage.xml"

[tool.isort]
force_single_line = true
include_trailing_comma = true
profile = "black"
src_paths = "pysamplelib"

[tool.mypy]
mypy_path = "pysamplelib"
files = "."
exclude = "venv|__init__.py|tests|docs"

[tool.pytest.ini_options]
addopts = "--doctest-modules  -rA --verbose"
python_paths = "pysamplelib"
testpaths = [
    "pysamplelib",
    "tests",
]
