[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel"
]

[project]
name = "pysamplelib"
description = "A sample Python library."
author = "Kieran Ryan"

[tool.black]
experimental-string-processing = true

[tool.coverage.html]
directory = "docs/coverage"

[tool.coverage.run]
branch = true
omit = [
    "*/venv/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 90.00
show_missing = true

[tool.coverage.xml]
output = "docs/coverage/coverage.xml"

[tool.isort]
include_trailing_comma = true
profile = "black"
src_paths = "pysamplelib"

[tool.ruff]
select = ["ALL", "I002"]
ignore = ["ANN", "ARG", "DTZ005", "D203", "D213", "G004", "INP001", "S101", "S102", "T201"]

[tool.ruff.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "pysamplelib"
files = "."
exclude = "venv|__init__.py|tests|docs"

[tool.pytest.ini_options]
addopts = "--doctest-modules  -rA --verbose"
python_paths = "pysamplelib"
testpaths = [
    "pysamplelib",
    "tests",
]
