[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[project]
author = "Kieran Ryan"
name = "pysamplelib"
description = "A sample Python library."

[tool.bandit]
exclude_dirs = ["tests", "venv"]

[tool.black]
preview = true

[tool.coverage.html]
directory = "docs/coverage"

[tool.coverage.run]
branch = true
omit = ["*/venv/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 90.00
show_missing = true

[tool.coverage.xml]
output = "docs/coverage/coverage.xml"

[tool.isort]
profile = "black"
src_paths = "pysamplelib"

[tool.radon]
exclude = "tests/*,venv/*"
show_complexity = true
show_mi = true
total_average = true

[tool.ruff]
select = ["ALL", "I002"]
ignore = [
    "ANN",
    "ARG",
    "DTZ005",
    "D203",
    "D213",
    "G004",
    "INP001",
    "S101",
    "S102",
    "T201",
]

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = "pysamplelib"
files = "."
exclude = "__init__.py|setup.py|docs|tests|venv"

[tool.pylint]
recursive = true
ignore = ["docs", "tests", "venv"]

[tool.pytest.ini_options]
addopts = "--doctest-modules -rA --verbose"
testpaths = ["pysamplelib", "tests"]
